@@ -20,7 +20,7 @@
 >   Blockfrost key in clear JSON; the template ships `admin`/`welcome` admin credentials; the HTTP
 >   API and the WS mesh are unencrypted.
 > - **Ephemeral state, single-use head config.** No data volumes are mounted (config comes in via
->   read-only bind mounts), so any restart means re-initializing a fresh head on L1 (§4) — and
+>   read-only bind mounts), so any restart means re-initializing a fresh head on L1 (§5) — and
 >   `head-config.json` embeds real utxos + wall-clock anchors, so it cannot be reused.
 > - **Public testnet (Preview / Preprod) via Blockfrost only** — a trusted third party between
 >   every node and L1.
@@ -69,9 +69,19 @@ process talking to Cardano L1 (a public testnet) via Blockfrost:
   (`peer-<label>/rocksdb`) and the EUTXO ledger store
   (`peer-<label>/l2-rocksdb`). Default data dir `.hydrozoa-data` relative to
   cwd; give each node its own.
-- **L2 query API** (head peers only, EUTXO only): `GET /l2/cardano-eutxo/utxos/{address}` and
-  `GET /l2/cardano-eutxo/transactions` are served only when the node runs the EUTXO ledger; a remote-ledger
-  node serves neither.
+- **User HTTP API** (head peers only, port 8080). One REST surface:
+  - **submit** — `POST /head/requests` (deposits and L2 transactions, distinguished by the body's
+    `type` field — `{ "type": "deposit", … }` or `{ "type": "transaction", … }`);
+  - **queries** — `GET /head/blocks[/{n}[/body]]`, `GET /head/requests[/{id}]` (lifecycle status per
+    request), `GET /head/effects/{l1TxId}` (L1 effect by tx id);
+  - **observability** — `GET /health` (liveness), `GET /ready` (readiness), `GET /version` (the
+    baked version, git commit, and build time);
+  - **admin** — `POST /api/admin/finalize` (basic-auth);
+  - **L2 EUTXO queries** (EUTXO ledger only — a remote-ledger node serves neither):
+    `GET /l2/cardano-eutxo/utxos/{address}`, `GET /l2/cardano-eutxo/transactions`.
+
+  Interactive **Swagger UI at `/docs`**; the authoritative machine-readable contract is
+  [`docs/openapi.yaml`](docs/openapi.yaml) (regenerated from the endpoint definitions).
 
 ### Network matrix
 
@@ -87,10 +97,36 @@ to Blockfrost (`blockfrostApiKey` in `peer-private.json`).
 
 ---
 
-## 2. Building
+## 2. Getting Hydrozoa
 
-Toolchain: Nix flake devshell (JDK 25, sbt, just — `flake.nix`); Scala 3.3.7. JDK 21+ if not using
-Nix.
+> Assumes **rootless Docker** (the tested setup): the alias runs the container as root, which under
+> rootless maps to *your* host user, so it can write the mounted `head/`. On rootful Docker, add
+> `-u "$(id -u):$(id -g)"` to the alias instead.
+
+**You do not need to clone this repo.** The published image carries the whole CLI plus the workspace
+files (`docker-compose.yml`, `hydrozoa.sh`, config template), so pull it and scaffold a head
+workspace from it:
+
+```bash
+mkdir myhead && cd myhead
+docker pull ghcr.io/cardano-hydrozoa/hydrozoa:0.1.0
+docker run --rm -v "$PWD:/work" -w /work --user root \
+  ghcr.io/cardano-hydrozoa/hydrozoa:0.1.0 scaffold .
+# writes docker-compose.yml, hydrozoa.sh, head/template/peer-private.template.json.local
+```
+
+Set `blockfrostApiKey` in `head/template/peer-private.template.json.local`, then `source
+./hydrozoa.sh` (sets the `hydrozoa` alias + `HYDROZOA_HOME=./head/demo`).
+
+Need a version that isn't in the registry? Build it from this repo — see §3.
+
+---
+
+## 3. Building
+
+Cloning this repo is only needed to run a version other than the published image, or to hack on
+Hydrozoa. Toolchain: Nix flake devshell (JDK 25, sbt, just — `flake.nix`); Scala 3.3.7. JDK 23+ if
+not using Nix (the runtime passes `--sun-misc-unsafe-memory-access=allow`).
 
 ```bash
 nix develop            # or direnv (.envrc = use flake .)
@@ -99,19 +135,31 @@ just test              # unit tests
 just integration-fast  # multi-peer integration subset
 ```
 
-Docker image (used by the composition in §4):
+Two ways to use your build:
+
+**A local Docker image** — the same image as the published one, from your sources; point
+`docker compose` (§5) at it with `HYDROZOA_IMAGE`:
 
 ```bash
-sbt docker:publishLocal
-# -> cardano-hydrozoa/hydrozoa:0.1.0-SNAPSHOT
-#    base eclipse-temurin:21-jre-jammy, EXPOSE 8080
+just docker-image      # -> cardano-hydrozoa/hydrozoa:0.1.0 (base eclipse-temurin:25-jre, EXPOSE 8080)
+# then: HYDROZOA_IMAGE=cardano-hydrozoa/hydrozoa:0.1.0 docker compose up -d
 ```
 
-There is no publish/deploy CI — GitHub Actions runs checks only.
+**Locally-compiled code (development)** — `just stage` builds the `hydrozoa` launcher from the
+current sources, and the `just` recipes invoke it directly, with no Docker and no sbt startup per
+command:
+
+```bash
+just stage             # -> target/universal/stage/bin/hydrozoa
+```
+
+Every command in §4–§6 is shown **both ways**: a `# Docker` line (`hydrozoa <cmd>`, via the image and
+the alias from §2) and the `just` equivalent (`just <cmd>`, which runs the staged launcher). Use
+whichever matches the build you made.
 
 ---
 
-## 3. Configuration
+## 4. Configuration
 
 Everything a node reads comes from two files:
 
@@ -119,7 +167,7 @@ Everything a node reads comes from two files:
 the peer topology, the L1 network, `scriptReferenceUtxos`, the peer-agreed head parameters
 (including `l2Ledger` and `identityIsomorphism`), the head id, and
 the **pre-built initialization transaction** with its wall-clock timing anchors — so it is
-single-use per head (§4). Each node derives the fallback transaction from the initialization tx
+single-use per head (§5). Each node derives the fallback transaction from the initialization tx
 when it reads the config.
 
 **(b) Per-node `peer-private.json`** — `ownPeerPrivate` (identity +
@@ -132,12 +180,14 @@ EUTXO node may omit it.
 
 ### Generating a head's configuration
 
-All commands run inside `nix develop`. The walkthrough uses the docker topology: **2 head peers,
-4 coil peers, coil quorum 2**. The pipeline turns operator-authored files into the two runtime
-files each node needs:
+Each step below covers both the Docker (`hydrozoa <cmd>`, via the §2 alias) and local (`just <cmd>`,
+after `just stage`) versions of the command.
+
+The walkthrough uses the docker topology: **2 head peers, 4 coil peers, coil quorum 2**. The
+pipeline turns operator-authored files into the two runtime files each node needs:
 
 ```
-   keygen-fleet (one sbt run)                      the bootstrap directory (operator-authored)
+   keygen-fleet (keygen per peer, then init-bootstrap-files)   the bootstrap directory (operator-authored)
    ├─ bootstrap/roster.json ──────────┐  peer topology (head/coil vkeys, ws addresses, hubs)
    ├─ bootstrap/defaults.json ────────┤  network + head params + per-peer equity  (editable)
    ├─ bootstrap/l2-cardano-eutxo.json ┤  opening L2 outputs (one per head peer, editable)
@@ -146,21 +196,22 @@ files each node needs:
                                       │
    deploy-scripts-and-g2-setup        │
    (head-0 wallet, Blockfrost)        │
-   └─ bootstrap/script-refs.json ─────┤  the on-chain reference UTxOs: treasury + dispute
-                                      │  validators and the G2 setup ladder (falls back to
-                                      │  config/script-refs/<network>.json when committed)
+   └─ bootstrap/ref-utxos.json ─────┤  the on-chain reference UTxOs: treasury + dispute
+                                      │  validators and the G2 setup ladder (falls back to the
+                                      │  per-network default baked into the image)
                                       │
                                       │  + head-0 UTxOs + protocol params   (Blockfrost)
                                       ▼
    build-head-config ───► head-config/head-config.json  assembles the four bootstrap files, adds
                                       │                 headId + the pre-built init tx + timing
                                       ▼
-   distribute head-config.json (shared) + each node's private.json  →  run the nodes (§4)
+   distribute head-config.json (shared) + each node's private.json  →  run the nodes (§5)
 ```
 
-**Step 1 — Set the defaults.** Two decisions live here, made with one edit: copy
-`config/template/peer-private.template.json` to `config/template/peer-private.template.json.local`
-(gitignored) and set `blockfrostApiKey` there.
+### Step 1 — Edit the template
+
+Set `blockfrostApiKey` in `head/template/peer-private.template.json.local` (scaffolded in §2;
+Nix users create it with `just scaffold`).
 
 - **Blockfrost key** — keygen-fleet reads only the `.local` file and refuses to run without it,
   so the real key never lands in a committed file.
@@ -170,22 +221,24 @@ files each node needs:
 
 The template is read at generation time — regenerating means fresh keys, so re-funding.
 
-**Step 2 — Generate keys, roster, and defaults in one run:**
+### Step 2 — Generate keys, roster, and defaults
 
 ```bash
-just keygen-fleet 2 4 2            # HEADS COILS QUORUM, → config/demo/
-# or: just keygen-fleet 2 4 2 mydir           # custom output dir
+hydrozoa keygen-fleet 2 4 2        # Docker; HEADS COILS QUORUM, → head/demo/
+just keygen-fleet 2 4 2            # local; custom dir: just keygen-fleet 2 4 2 head/mydir
 ```
 
-One sbt invocation: keygen once per peer, then the bootstrap files. Output layout:
+One command generates a key pair per peer (registered in the roster, with a filled private config),
+then the shared `defaults.json` + `l2-cardano-eutxo.json`; the network comes from the template's
+Blockfrost-key prefix. Output layout:
 
 ```
-config/demo/
+head/demo/
 ├── bootstrap/                     # the operator-facing bootstrap directory (build-head-config input)
 │   ├── roster.json                #   peer topology
 │   ├── defaults.json              #   network + head params (coilQuorum, timing…) + per-peer equity
 │   ├── l2-cardano-eutxo.json      #   opening L2 outputs, one 5-ADA output per head peer — edit to taste
-│   └── script-refs.json           #   written by deploy-scripts-and-g2-setup (step 4; optional —
+│   └── ref-utxos.json           #   written by deploy-scripts-and-g2-setup (step 4; optional —
 │                                  #   committed per-network defaults are the fallback)
 ├── head-config/
 │   └── head-config.json           # written later by build-head-config (step 5)
@@ -197,12 +250,11 @@ config/demo/
 
 Peer numbering is positional in the roster: `private/head-N` ↔ head peer N; likewise coils.
 
-**Step 2b — Set the head parameters.** `bootstrap/defaults.json` carries demo defaults; edit any
+### Step 2b — Set the head parameters
+
+`bootstrap/defaults.json` carries demo defaults; edit any
 of them:
 
-- `cardanoNetwork` — seeded from the Blockfrost key's network (step 1); `build-head-config`
-  talks to Blockfrost for it, so only the Blockfrost networks (mainnet / preprod / preview) are
-  supported.
 - `headParams` — `coilQuorum` (the QUORUM argument passed to keygen-fleet; 2 here), timing,
   fallback contingency, dispute resolution, settlement.
 - `initialEquityContributions` — per head peer; the demo default is head peer 0 funds
@@ -211,50 +263,57 @@ of them:
 The initial block's timing is anchored to wall-clock automatically when the head config is built
 — nothing to set here.
 
-**Step 2c — Specify the initial utxo set.** `bootstrap/l2-cardano-eutxo.json` is the head's
+### Step 2c — Specify the initial utxo set
+
+`bootstrap/l2-cardano-eutxo.json` is the head's
 opening L2 ledger — a list of `{ "address", "value" }` outputs (value in CIP-0116). keygen-fleet
 seeds one 5-ADA output per head peer; replace it with the real opening distribution, or leave it
-empty (`[]`) for an empty head.
+empty (`[]`) — a head can also be funded later by depositing into it (§6).
 
-**Step 3 — Fund head peer 0** (the sole funder): print its address and send testnet tADA to it
+### Step 3 — Fund head peer 0
+
+The sole funder: print its address and send testnet tADA to it
 (e.g. from the [testnet faucet](https://docs.cardano.org/cardano-testnets/tools/faucet) — pick
 your network there; one 10k-tADA drip is plenty):
 
 ```bash
-just head-zero-address       # derives the address from bootstrap/{roster,defaults}.json on demand
+hydrozoa head-zero-address   # Docker; derives the address from bootstrap/{roster,defaults}.json
+just head-zero-address       # local
 ```
 
 The funding must cover equity + the whole head's fallback contingency + the opening L2 value +
 tx fee; step 5 logs the exact lovelace required and fails with the shortfall if underfunded.
 
-**Step 4 — Deploy the reference scripts** (once per network per script version; the target
-network comes from the Blockfrost key):
+### Step 4 — Deploy the reference scripts
+
+> **You can likely skip this.** With no `bootstrap/ref-utxos.json`, `build-head-config` falls back
+> to the per-network default **baked into the image** — Preview and Preprod are included — so on
+> those networks skip to Step 5. Run this only for a network without a baked default, or after the
+> compiled scripts change (then update `src/main/resources/scaffold/ref-utxos/` so the next head
+> can skip it too).
 
 ```bash
-just deploy-scripts-and-g2-setup config/demo/private/head-0/private.json
-# -> config/demo/bootstrap/script-refs.json
+hydrozoa deploy-scripts-and-g2-setup   # Docker
+just deploy-scripts-and-g2-setup        # local
+# -> head/demo/bootstrap/ref-utxos.json (funded by head-0's wallet under the head dir)
 ```
-
-**This step is optional when a committed default exists for the network**: with no
-`bootstrap/script-refs.json`, `build-head-config` falls back to
-`config/script-refs/<network>.json` (Preview's and Preprod's are committed). After a fresh
-deployment, commit the refs there so the next head on that network can skip this step.
 
 The rule-based regime (evacuation/dispute) txs resolve the treasury + dispute validators — and
 the G2 setup ladder — as **reference UTxOs** at startup. This target deploys the currently
 compiled scripts, funded from head-0's wallet (change returns): one chained tx per validator
 plus, unless an existing ladder is reused (the `LADDER_REFS` argument), one tx carrying the seven
 setup-ladder rungs — all locked at the unspendable burn address — then writes the reference
-inputs to `script-refs.json`; the bootstrap directory's own refs take precedence over the
+inputs to `ref-utxos.json`; the bootstrap directory's own refs take precedence over the
 committed defaults. Because the burn address can never be spent from, **one deployment serves
 every head and every restart** — redeploy the validators only when the compiled scripts change
 (symptom: step 5 or node start fails complaining about invalid treasury/dispute script utxos);
 the ladder never changes.
 
-**Step 5 — Build the shared head config:**
+### Step 5 — Build the shared head config
 
 ```bash
-just build-head-config       # reads config/demo/bootstrap/, writes config/demo/head-config/head-config.json
+hydrozoa build-head-config   # Docker; reads head/demo/bootstrap/, writes head/demo/head-config/head-config.json
+just build-head-config       # local
 ```
 
 The build assembles the bootstrap directory's four files (roster, defaults, opening L2 state,
@@ -264,21 +323,22 @@ into the config (each node derives the fallback tx from it when reading the conf
 Blockfrost key comes from the `.local` template (step 1); the build fails fast if the key's
 network does not match the bootstrap config's `cardanoNetwork`.
 
-At this point every node has its two files, and the composition (§4) mounts
+At this point every node has its two files, and the composition (§5) mounts
 `head-config/head-config.json` + that node's `private/<peer>/private.json`.
 
 ---
 
-## 4. Running Hydrozoa L2
+## 5. Running Hydrozoa L2
 
 ### Docker composition (2 head + 4 coil)
 
 `docker-compose.yml` — one `hydrozoa` container per node on a single user-defined bridge network,
 `mesh`.
 
-- Config mounts come from `${HYDROZOA_CONFIG:-./config/demo}`: the shared `head-config.json` plus
-  `head-N/private.json` or `coil-N/private.json` per node. `${HYDROZOA_IMAGE}` overrides the
-  hydrozoa image (default `cardano-hydrozoa/hydrozoa:0.1.0-SNAPSHOT`).
+- Config mounts come from `${HYDROZOA_HOME:-./head/demo}`: the shared `head-config.json` plus
+  `head-N/private.json` or `coil-N/private.json` per node. The image defaults to the published
+  `ghcr.io/cardano-hydrozoa/hydrozoa:0.1.0` (pulled on first run); set `${HYDROZOA_IMAGE}` to use
+  another, e.g. a locally built `cardano-hydrozoa/hydrozoa:0.1.0`.
 
 Caveats:
 - **State is ephemeral.** No data volumes are mounted (only read-only config bind mounts), so both
@@ -295,9 +355,25 @@ Caveats:
 
 ### Bringing up the head
 
+Default — pull the published image and run `head/demo`:
+
 ```bash
-sbt docker:publishLocal        # hydrozoa image (once, after code changes)
-docker compose up -d
+docker compose up -d           # pulls ghcr.io/cardano-hydrozoa/hydrozoa:0.1.0 on first run
+```
+
+**Another image** — `HYDROZOA_IMAGE` (default `ghcr.io/cardano-hydrozoa/hydrozoa:0.1.0`), e.g. a
+locally built one (§3):
+
+```bash
+HYDROZOA_IMAGE=cardano-hydrozoa/hydrozoa:0.1.0 docker compose up -d
+```
+
+**Another configuration** — `HYDROZOA_HOME` (default `./head/demo`) selects the directory each
+container mounts `head-config.json` + its `private.json` from. It's the same variable the CLI
+generates into, so one value drives both the build and the run:
+
+```bash
+HYDROZOA_HOME=./head/other docker compose up -d
 ```
 
 Stack 0 initializes once both head peers + any `coilQuorum` coil peers are signing.
@@ -325,7 +401,7 @@ finalization) appears in the same section as the head progresses.
 ### Restarting the head
 
 **Teardown first:** if the previous head initialized and still holds funds, finalize before
-anything else (Teardown / recovery of funds, §5) — otherwise the funds stay locked until the
+anything else (Teardown / recovery of funds, §6) — otherwise the funds stay locked until the
 fallback/evacuation path matures.
 
 The demo nodes keep no durable state across `docker compose down` (no volumes), so restarting means
@@ -350,8 +426,8 @@ just build-head-config
 docker compose up -d           # right after the build — the config is freshest now
 ```
 
-**Reusable across restarts:** the whole `config/demo/bootstrap/` directory and every
-`config/demo/private/` config — identities and keys are not time- or UTxO-bound, and the
+**Reusable across restarts:** the whole `head/demo/bootstrap/` directory and every
+`head/demo/private/` config — identities and keys are not time- or UTxO-bound, and the
 reference-script UTxOs sit at an unspendable burn address. Only `head-config/head-config.json` is
 single-use. Regenerate the fleet (`just keygen-fleet`) only for fresh identities; that changes head
 peer 0's address, so re-fund it. The hydrozoa docker image only needs rebuilding after hydrozoa
@@ -359,19 +435,23 @@ code changes.
 
 ---
 
-## 5. Demo: drive the running head
+## 6. Demo: drive the running head
+
+These two commands are **interactive** (they prompt on the console) and reach the head over HTTP —
+the `hydrozoa` alias from §2 already enables the TTY and host networking they need.
 
 ### Submit an L2 transaction
 
 ```bash
-just submit-l2-tx        # or: just submit-l2-tx config/demo http://localhost:8081
+hydrozoa submit-l2-tx    # Docker; add --head-uri http://localhost:8081 to hit head-1
+just submit-l2-tx        # local; or: just submit-l2-tx head/demo http://localhost:8081
 ```
 
 Pick a peer (its key signs), pick one of its L2 utxos (fetched from `GET /l2/cardano-eutxo/utxos/{address}`
 — the opening `l2-cardano-eutxo.json` outputs sit at the head peers' addresses), enter a
 destination (bech32, or a peer name like `head-1`) and a value. The tool builds the zero-fee
 native tx (with the CIP-67 output designations and the headId pin in the metadata), signs it with
-the peer wallet, and posts it to `POST /head/tx`. An example session — send 2 of head-0's
+the peer wallet, and posts it to `POST /head/requests`. An example session — send 2 of head-0's
 opening 5 ADA to head-1:
 
 ```
@@ -399,13 +479,14 @@ Verify with `curl http://localhost:8080/l2/cardano-eutxo/utxos/<address>` for bo
 ### Deposit into the head
 
 ```bash
-just deposit
+hydrozoa submit-deposit  # Docker
+just submit-deposit      # local
 ```
 
 Pick a peer, pick one of its **L1** utxos (via the peer's Blockfrost backend — for the demo that
 is head peer 0, the funded one), and enter the L2 outputs the deposit should spawn. The tool
 serializes the L2 payload (its hash rides in the deposit tx metadata), registers the deposit with
-`POST /head/deposit`, then signs the deposit tx and submits it to L1 via Blockfrost,
+`POST /head/requests`, then signs the deposit tx and submits it to L1 via Blockfrost,
 polling until the utxo lands. An example session — deposit 3 ADA from head-0's L1 funds to
 coil-0's L2 address:
 
@@ -445,6 +526,9 @@ curl "http://localhost:8080/l2/cardano-eutxo/utxos/<bech32-address>"     # curre
 `/l2/cardano-eutxo/transactions` covers plain L2 transactions plus deposit registrations, absorptions, and
 refunds (the `kind` field tells them apart); `/l2/cardano-eutxo/utxos` returns the utxos as CIP-0116 JSON.
 Both are the quickest way to watch a submitted tx or deposit land.
+
+Point a browser at `http://localhost:8080/docs` for the interactive Swagger UI over the full API
+(blocks, requests, effects, health/readiness, and the L2 queries above).
 
 ### Teardown / recovery of funds
 
